@startuml
package models {
    abstract class Pokemon {
     - nombre: String
     - id: String
     - primerTipo: String
     - segundoTipo: String
     - Pokemon(id: int, nombre: String, \nprimerTipo: String, segundoTipo: String)
     + get's()
    }
    class Basico {
     - primeraEvolucion: String
     - segundaEvolucion: String
     + Basico(id: int, nombre: String, primeraEvolucion: String, segundaEvolucion: String\nprimerTipo: String, segundoTipo: String)
     + get's()
    }
    class PrimerEvolucion {
     - basico: String
     - segundaEvolucion String
     + PrimerEvolucion(id: int, nombre: String, segundaEvolucion: String,\n basico: String primerTipo: String, segundoTipo: String)
     + get's()
    }
    class SegundaEvolucion {
     - primeraEvolucion: String
     - basico: String
     + SegundaEvolucion(id: int, nombre: String, primeraEvolucion: String,\nbasico: String primerTipo: String, segundoTipo: String,)
     + get's()
    }
    class NodoDoble {
     + NodoDoble()
     + get's() & set's()
    }
    class ListaNodoDoble {
     - tamanio: int
     + listaNodoDoble()
     + agregar(pokemon: Pokemon): void
     + desplieguePokemon(pokemon: Pokemon): void
     + desplegarID(id: String): void
     + contieneID(id: String): boolean
     + obtenerPokemonPorId(id: String): Pokemon
     + contieneNombre(nombre: String): boolean
     + obtenerPokemonPorNombre(nombre: String): Pokemon
     + contieneTipo(tipo: String): boolean
     + desplegarTipo(tipo: String): void
     + recorrerAtrasCuartoRequerimiento(): void
     + ordenar(comienzo: String): void
     + desplieguePokemonBusquedaPersonalizada(pokemon: Pokemon): void
     + getTamanio(): int
     + ordenarAlfabeticamenteArray(): ArrayList<String>
     + LinkedList(): LinkedList<NodoDoble>
    }
}
package services {
    interface Sistema {
     + desplegarPorRangosId(): void
     + desplegarTodosAlfabeticamente(): void
     + desplegarCoincideTipoIdDecreciente(): void
     + desplegarPrimeraEvolucion(): void
     + busquedaPersonalizada(): void
    }
    class SistemaImpl {
     + SistemaImpl()
     + inicio(): void
     + ordenarArchivo(): void
     + menuPrincipal() void
     + buscarNombre(): void
     + buscarID(): void
     + despliegueEvolucionesBasico(pokemon: Basico): void
     + despliegueEvolucionesPrimerEvolucion(pokemon: PrimeraEvolucion): void
     + despliegueEvolucionesSegundaEvolucion(pokemon: SegundaEvolucion): void

    }
}

SistemaImpl .left|> Sistema
SistemaImpl -right> ListaNodoDoble: - pokedex: ListaNodoDoble
ListaNodoDoble *-right-> NodoDoble : - cabeza: Nodo
ListaNodoDoble *-right-> NodoDoble : - cola: Nodo
NodoDoble o-> "1"NodoDoble : - siguiente: NodoDoble
NodoDoble o-> "1"NodoDoble : - anterior: NodoDoble
Basico -up-|> Pokemon
PrimerEvolucion -up-|> Pokemon
SegundaEvolucion -up-|> Pokemon


NodoDoble -down-> Pokemon : - pokemon: Pokemon

@enduml